--- a/Smack/Smack/Base.lproj/Main.storyboard
+++ b/Smack/Smack/Base.lproj/Main.storyboard
@@ -275,15 +275,18 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gwn-zJ-w9I">
-                                <rect key="frame" x="62" y="351" width="251" height="30"/>
+                                <rect key="frame" x="62.5" y="351" width="250" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="EHQ-BL-mDc"/>
-                                    <constraint firstAttribute="width" constant="251" id="j4x-eg-ouv"/>
+                                    <constraint firstAttribute="width" constant="250" id="j4x-eg-ouv"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
                                 <state key="normal" title="Don't have an account? Sign up here">
                                     <color key="titleColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="createAccountButtonPressed:" destination="uHz-ZC-qWm" eventType="touchUpInside" id="ko9-dB-1Tb"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -301,16 +304,174 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Uy1-2f-b6r"/>
                     </view>
+                    <connections>
+                        <segue destination="vwl-CC-fFo" kind="show" identifier="toCreateAccount" id="oYK-yV-sS6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Sj8-rj-6Re" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1688.8" y="-242.42878560719643"/>
+        </scene>
+        <!--Create AccountVC-->
+        <scene sceneID="GXi-Gu-D7m">
+            <objects>
+                <viewController id="vwl-CC-fFo" customClass="CreateAccountVC" customModule="Smack" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="eKY-aT-FOk">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create an account" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sfw-Il-7as">
+                                <rect key="frame" x="104" y="60" width="167" height="23"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="19"/>
+                                <color key="textColor" red="0.25882352939999997" green="0.3294117647" blue="0.72549019609999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oSC-wK-aij">
+                                <rect key="frame" x="331" y="28" width="28" height="28"/>
+                                <state key="normal" image="closeButton"/>
+                                <connections>
+                                    <action selector="closePressed:" destination="vwl-CC-fFo" eventType="touchUpInside" id="tz2-yR-dbQ"/>
+                                </connections>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="19" translatesAutoresizingMaskIntoConstraints="NO" id="UBs-M3-1be">
+                                <rect key="frame" x="63" y="123" width="250" height="161"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iAe-C2-rWI">
+                                        <rect key="frame" x="0.0" y="0.0" width="250" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="T18-4C-4le"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="udW-yZ-Ncp">
+                                        <rect key="frame" x="0.0" y="39" width="250" height="2"/>
+                                        <color key="backgroundColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="2" id="GAy-Af-cU2"/>
+                                            <constraint firstAttribute="width" constant="250" id="Uvj-Uo-KnH"/>
+                                        </constraints>
+                                    </view>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="71W-h2-R5g">
+                                        <rect key="frame" x="0.0" y="60" width="250" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="VTe-SY-h8O"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                    </textField>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bvi-g4-zSq">
+                                        <rect key="frame" x="0.0" y="99" width="250" height="2"/>
+                                        <color key="backgroundColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="2" id="dT6-ls-QnS"/>
+                                            <constraint firstAttribute="width" constant="250" id="iRG-ww-vXx"/>
+                                        </constraints>
+                                    </view>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bcH-yK-Gix">
+                                        <rect key="frame" x="0.0" y="120" width="250" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="HLG-wF-RQ9"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                    </textField>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Itb-aC-Jyj">
+                                        <rect key="frame" x="0.0" y="159" width="250" height="2"/>
+                                        <color key="backgroundColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="M4G-x1-w2i"/>
+                                            <constraint firstAttribute="height" constant="2" id="f9p-Id-r1q"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4ra-tT-u0j">
+                                <rect key="frame" x="138" y="324" width="100" height="130"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="130" id="xyj-zv-cId"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                                <state key="normal" title="Choose avatar">
+                                    <color key="titleColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="createAccountButtonPressed:" destination="uHz-ZC-qWm" eventType="touchUpInside" id="Vyf-Sv-Zoj"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P2K-BE-y1v">
+                                <rect key="frame" x="63" y="597" width="250" height="50"/>
+                                <color key="backgroundColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="RSr-mg-qsS"/>
+                                    <constraint firstAttribute="height" constant="50" id="nvs-tN-oYv"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
+                                <state key="normal" title="Create account">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileDefault" translatesAutoresizingMaskIntoConstraints="NO" id="O8D-zO-XFJ">
+                                <rect key="frame" x="137.5" y="324" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="JpA-rs-sCD"/>
+                                    <constraint firstAttribute="width" constant="100" id="RWO-LL-GgV"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QW5-4h-gMO">
+                                <rect key="frame" x="62.5" y="458" width="250" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="HXC-g1-epl"/>
+                                    <constraint firstAttribute="width" constant="250" id="wA7-Aa-i4G"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                                <state key="normal" title="Generate background color">
+                                    <color key="titleColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="createAccountButtonPressed:" destination="uHz-ZC-qWm" eventType="touchUpInside" id="Y02-jg-ndF"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="4ra-tT-u0j" firstAttribute="width" secondItem="O8D-zO-XFJ" secondAttribute="width" id="4Hh-cS-HFi"/>
+                            <constraint firstItem="O8D-zO-XFJ" firstAttribute="top" secondItem="UBs-M3-1be" secondAttribute="bottom" constant="40" id="8sj-oC-iCn"/>
+                            <constraint firstItem="4ra-tT-u0j" firstAttribute="top" secondItem="O8D-zO-XFJ" secondAttribute="top" id="E1v-8e-6WT"/>
+                            <constraint firstItem="O8D-zO-XFJ" firstAttribute="centerX" secondItem="eKY-aT-FOk" secondAttribute="centerX" id="H13-nl-WAQ"/>
+                            <constraint firstItem="8DT-FX-iFK" firstAttribute="bottom" secondItem="P2K-BE-y1v" secondAttribute="bottom" constant="20" id="IiB-gq-Ow4"/>
+                            <constraint firstItem="QW5-4h-gMO" firstAttribute="top" secondItem="4ra-tT-u0j" secondAttribute="bottom" constant="4" id="RU6-ha-P4L"/>
+                            <constraint firstItem="oSC-wK-aij" firstAttribute="top" secondItem="8DT-FX-iFK" secondAttribute="top" constant="8" id="Rgd-Oy-sB9"/>
+                            <constraint firstItem="8DT-FX-iFK" firstAttribute="trailing" secondItem="oSC-wK-aij" secondAttribute="trailing" constant="16" id="UBP-Yi-QGy"/>
+                            <constraint firstItem="4ra-tT-u0j" firstAttribute="centerX" secondItem="eKY-aT-FOk" secondAttribute="centerX" id="b0A-83-zfT"/>
+                            <constraint firstItem="sfw-Il-7as" firstAttribute="top" secondItem="8DT-FX-iFK" secondAttribute="top" constant="40" id="cn7-66-g3U"/>
+                            <constraint firstItem="sfw-Il-7as" firstAttribute="centerX" secondItem="eKY-aT-FOk" secondAttribute="centerX" id="djn-f9-z53"/>
+                            <constraint firstItem="QW5-4h-gMO" firstAttribute="centerX" secondItem="eKY-aT-FOk" secondAttribute="centerX" id="fCP-bL-pMp"/>
+                            <constraint firstItem="O8D-zO-XFJ" firstAttribute="top" secondItem="UBs-M3-1be" secondAttribute="bottom" constant="40" id="mZ4-8Z-3w8"/>
+                            <constraint firstItem="UBs-M3-1be" firstAttribute="top" secondItem="sfw-Il-7as" secondAttribute="bottom" constant="40" id="mvW-XL-kSi"/>
+                            <constraint firstItem="P2K-BE-y1v" firstAttribute="centerX" secondItem="eKY-aT-FOk" secondAttribute="centerX" id="pje-Gs-XsG"/>
+                            <constraint firstItem="UBs-M3-1be" firstAttribute="centerX" secondItem="eKY-aT-FOk" secondAttribute="centerX" id="vH9-TA-vXK"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="8DT-FX-iFK"/>
+                    </view>
+                    <connections>
+                        <segue destination="qOg-bq-WZe" kind="unwind" identifier="unwindToChannel" unwindAction="prepareForUnwindWithSegue:" id="t6X-V8-BS9"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LIS-d6-XEq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="qOg-bq-WZe" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="2408.8000000000002" y="-244.22788605697153"/>
         </scene>
     </scenes>
     <resources>
         <image name="addChannelButton" width="22" height="22"/>
         <image name="closeButton" width="28" height="28"/>
         <image name="menuProfileIcon" width="99" height="99"/>
+        <image name="profileDefault" width="192" height="192"/>
         <image name="smackBurger" width="40" height="40"/>
         <image name="smackLogo" width="48" height="40"/>
     </resources>
